refactor: update CoverageAnalyzer to use MethodElementName for improved type consistency in test handling